feature: Add sample test case

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -4,7 +4,8 @@ find_package(GTest REQUIRED COMPONENTS gtest gmock gtest_main gmock_main)
 
 set(TEST_SOURCES
     test_basic.cpp
-    test_sample_lib.cpp
+    sample_lib/test_sample_lib.cpp
+    sample_lib/internal/internal_class_tests.cpp
 )
 
 
