feature: Update doxygen and testing

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,4 +1,4 @@
-
+enable_testing()
 find_package(GTest REQUIRED COMPONENTS gtest gmock gtest_main gmock_main)
 
 
@@ -9,12 +9,14 @@ set(TEST_SOURCES
 )
 
 
-add_executable(ptest ${TEST_SOURCES})
-target_include_directories(ptest PRIVATE ../src)
-target_link_libraries(ptest
+add_executable(sample_lib_tests ${TEST_SOURCES})
+target_include_directories(sample_lib_tests PRIVATE ../src)
+target_link_libraries(sample_lib_tests
     GTest::gtest
     GTest::gmock
     GTest::gtest_main
     GTest::gmock_main
     sample_lib
 )
+
+add_test(SampleLibTests sample_lib_tests)
